apps/platform-system/authelia/manifests/authelia-portal.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia-portal
  namespace: platform-system
spec:
  parentRefs:
    - name: gateway-external
      namespace: platform-system
    - name: gateway-internal
      namespace: platform-system
  hostnames:
    - auth.edgard.org
  rules:
    - backendRefs:
        - name: authelia
          port: 80
